--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ a{
     clear: both;
 }
 
-/* Containers */
+/* Common Containers */
 .container_L, .container_M, .container_S{
     margin: 0 auto;
 }
@@ -29,6 +29,11 @@ a{
 
 .container_S{
     max-width: 1000px;
+}
+
+/* Common Margins */
+.c-margin{
+    margin: 0 40px;
 }
 
 /* Common Typography */
@@ -46,6 +51,15 @@ h2{
     font-size: 30pt;
     font-weight: 700;
     margin-bottom: 35px;
+}
+
+h3{
+    font-size: 20pt;
+    margin-bottom: 8px;
+}
+
+h4{
+    margin-bottom: 20px;
 }
 
 .plan-radio label{
@@ -160,16 +174,15 @@ header li a{
     width: calc(100% / 3 - 26.7px);
     min-height: 1000px;
 }
-#ptcenter{
-    margin: 0 40px;
-}
 
 .plan-type-large{
     width: 100%;
     margin-top: 40px;
-    min-height: 250px;
+    min-height: 230px;
 }
 
+
+/* Plan type Headbox */
 .plan-type .headbox, .plan-type-large .headbox{
     width: 100%;
     border-bottom: 1px solid #888;
@@ -182,22 +195,30 @@ header li a{
     display: inline;
 }
 
-.plan-type h3, .plan-type h4{
-    margin-bottom: 20px;
-}
-
 .plan-type h6{
     font-size: 15pt;
     margin-bottom: 8px;
 }
-.plan-type h3{
-    font-size: 20pt;
-    margin-bottom: 8px;
+
+/* Plan type body */
+.bodybox .pt-fea{
+    margin: 45px 0;
 }
 
-.plan-type li{
-    list-style-type: none;
+.bodybox p, .bodybox li{
     margin-bottom: 20px;
+}
+
+.bodybox li{
+    list-style-type: none;
+}
+.bodybox li:before{
+    content: '\f00c';
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    color: #0061ff;
+    margin-right: 10px;
 }
 .plan-type ul i{
     list-style-type: none;
@@ -207,9 +228,6 @@ header li a{
 .bodybox{
     padding: 30px 20px 0px 20px;
 }
-.bodybox p{
-    margin-bottom: 30px;
-}
 
 .link-under-btn{
     margin-top: 25px;
@@ -218,15 +236,27 @@ header li a{
     position: relative;
 }
 .link-under-btn a{
-    color: blue;
+    color: #0061ff;
     text-decoration: underline;
 }
 .link-under-btn:after{
-    content: "";
+    content: '';
         position: absolute;
         left: 0;
         bottom: 0;
-        height: 5px;
         width: 22%;
         border-top: 2px solid #000;
+}
+
+/* Plan Type Large */
+.plan-type-large .bodybox{
+    position: relative;
+}
+.plan-type-large a.btn{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+.plan-type-large p{
+    margin: 50px 0 0 0;
 }
