--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ header li a{
     color: #0061ff;
     text-decoration: underline;
 }
-.link-under-btn:after{
+.bodybox .link-under-btn:after{
     content: '';
         position: absolute;
         left: 0;
@@ -310,7 +310,7 @@ header li a{
 
 /* Team Show */
 #team-show{
-    background-color: chartreuse;
+    padding-top: 200px;
 }
 
 .tms-sq-b{
@@ -332,10 +332,32 @@ header li a{
 
 .tms-sq-c{
     width: calc(40vw - 17px);
-    height: 30vw;
+    min-height: 30vw;
     float: left;
+    padding: 60px;
 
-    background-color: pink;
+    background-color: #f5f5f5;
+}
+.tms-sq-c img{
+    width: 30%;
+    display: block;
+}
+.tms-sq-c div{
+    position: relative;
+    padding: 30px 0;
+    margin-bottom: 35px;
+}
+.tms-sq-c div:after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 12%;
+    border-top: 2px solid #888;
+}
+.tms-sq-c span{
+    margin-top: 30px;
+    display: inline-block;
 }
 
 #tms-DESIGNit{
