--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,11 @@ span.underline{
 }
 
 /* buttons */
+.btn:hover{
+    transform: scale(1.05);
+    box-shadow: 10px 10px 25px -12px rgba(0,0,0,0.4);
+    transition: 0.2s;
+}
 .btn{
     background-color: #0061ff;
     padding: 8px 20px;
@@ -98,7 +103,7 @@ span.underline{
 }
 .btn.btn-empty{
     color: #333;
-    background-color: white;
+    background-color: transparent;
     border: 2px solid #333;
 }
 .btn.btn-white{
