--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ span.underline{
 .btn:hover{
     transform: scale(1.05);
     box-shadow: 10px 10px 25px -12px rgba(0,0,0,0.4);
-    transition: 0.2s;
+    transition: 0.3s;
 }
 .btn{
     background-color: #0061ff;
@@ -461,5 +461,45 @@ p.answer{
 /* Footer */
 footer{
     background-color: black;
-    height: 500px;
+    color: white;
+    padding: 150px 0px 30px 0px;
+}
+
+footer a{
+    color: white;
+}
+footer a:hover{
+    color: #0061ff;
+}
+
+footer ul{
+    list-style-type: none;
+}
+
+footer .container_M > ul{
+    margin-bottom: 80px;
+}
+
+footer .container_M > ul >li{
+    width: calc(100% / 5);
+    float: left;
+}
+
+footer h3 + ul li{
+    margin-bottom: 15px;
+}
+
+.foot-lang:before{
+    content: "";
+    width: 100px;
+    height: 2px;
+    display: block;
+    margin-bottom: 30px;
+    background-color: white;
+}
+.foot-lang p{
+    display: inline;
+}
+.foot-lang i{
+    margin: 0 5px;
 }
