--- a/css/style.css
+++ b/css/style.css
@@ -354,9 +354,10 @@ header li a{
 
 .tms-sq-c{
     width: calc(40vw - 17px);
-    min-height: 30vw;
+    height: 30vw;
     float: left;
     padding: 60px;
+    overflow-y: auto;
 
     background-color: #f5f5f5;
 }
@@ -442,19 +443,21 @@ header li a{
     color: #888;
 }
 
-#questions .container_S > div{
+
+#questions .container_S > ul > li{
     border-bottom: 1px solid #888;
     padding: 30px 0px;
+    list-style-type: none;
 }
 
-#questions .container_S > div:first-of-type{
+#questions .container_S > ul > li:first-of-type{
     border-top: 1px solid #888;
 }
 p.answer{
     margin-top: 20px;
     display: none;
 }
-#questions .container_S > div:hover > p.answer{
+#questions .container_S > ul > li:hover > p.answer{
     display: block;
 }
 
